# python-blog

./: .build.yml  .dockerignore  .drone.yml  .eslintrc  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  constraints.txt  docker-compose-build.yaml  docker-compose.yaml  docker-compose.yml  migration.py  pre-commit.Dockerfile  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  tasks.py  tests.Dockerfile
.builds/: docker.yml  freebsd.yml
.github/workflows/: codeql-analysis.yaml  pre-commit.yaml  publish.yaml  pull_request.yaml  test.yaml  update-dependencies.yaml
.kolo/: config.toml
ansible/: blog.service  hosts  nginx.conf  playbook.yml
articles/: admin.py  assets.py  compressor.py  context_processors.py  forms.py  markdown.py  models.py  urls.py  utils.py  views.py
articles/management/commands/: check_pending_comments.py  notify_commenters.py
articles/migrations/: 0001_initial.py  0002_article.py  0005_article_slug.py  0006_page.py  0007_auto_20200817_0941.py  0009_comment.py  0010_auto_20200818_1825.py  0011_auto_20200818_1829.py  0012_auto_20200818_1845.py  0013_auto_20200818_1912.py  0014_auto_20200818_1952.py  0015_auto_20200818_2138.py  0017_auto_20200820_1606.py  0018_auto_20200821_1232.py  0019_article_comments_allowed.py  0020_auto_20200903_2157.py  0024_auto_20201224_1746.py  0025_article_custom_css.py  0027_auto_20210303_1633.py  0028_remove_article_keywords.py  0031_auto_20210306_1449.py
articles/static/: admin_articles.css  admonitions.css  authenticated.css  code.css  edit-keymap.js  live-preview.js  newcss.css  public.css  scripts.js  style.css  toggle-dark-mode.js
articles/static/icons/: site.webmanifest
articles/templates/admin/articles/article/: submit_line.html
articles/templates/articles/: admin_link_snippet.html  analytics.html  article_change_form.html  article_detail.html  article_list.html  article_search.html  base.html  comment_snippet.html  comments_notification_email.txt  date_snippet.html  datetime_snippet.html  favicon.html  metadata_snippet.html
articles/templates/articles/snippets/: admin_link.html  analytics.html  analytics_head.html  code_style.html  favicon.html  load_styles_and_scripts.html  metadata.html  navigation.html  style.html  style_home.html
articles/tests/: conftest.py  test_admin.py  test_api_views.py  test_articles.py  test_feed_views.py  test_html_views.py  test_models.py
articles/views/: api.py  feeds.py  html.py
attachments/: admin.py  apps.py  models.py
attachments/management/commands/: reprocess_all_attachments.py
attachments/migrations/: 0001_initial.py  0002_auto_20200826_1814.py  0003_auto_20200826_1843.py  0004_auto_20200903_2116.py  0007_auto_20201201_1917.py
attachments/static/attachments/js/: copy_url.js
attachments/tests/: conftest.py
blog/: settings.py  urls.py
blog/templates/admin/: base_site.html
docker/: nginx-dev.conf  nginx.conf  run.sh  runtests.sh  setup-docker
envs/: local.env.dist
src/: manage.py
src/articles/: admin.py  context_processors.py  markdown.py  models.py  urls.py  utils.py
src/articles/migrations/: 0001_initial.py  0002_article.py  0003_auto_20200814_1522.py  0004_article_views_count.py  0005_article_slug.py  0006_page.py  0007_auto_20200817_0941.py  0008_auto_20200817_1748.py  0009_comment.py  0010_auto_20200818_1825.py  0011_auto_20200818_1829.py  0012_auto_20200818_1845.py  0013_auto_20200818_1912.py  0014_auto_20200818_1952.py  0015_auto_20200818_2138.py  0016_comment_user_notified.py  0017_auto_20200820_1606.py  0018_auto_20200821_1232.py  0019_article_comments_allowed.py  0020_auto_20200903_2157.py  0021_auto_20201110_1623.py  0022_article_keywords.py  0023_article_has_code.py  0024_auto_20201224_1746.py  0025_article_custom_css.py  0026_article_draft_key.py  0027_auto_20210303_1633.py  0028_remove_article_keywords.py  0029_auto_20210303_1711.py  0030_tag_slug.py  0031_auto_20210306_1449.py  0032_auto_20210306_1449.py  0033_alter_article_options.py  0034_replace_attachment_urls.py
src/articles/static/: admin_articles.css  admonitions.css  authenticated.css  copy-code.js  edit-keymap.js  live-preview.js  login.css  public.css
src/articles/static/icons/: browserconfig.xml
src/articles/templates/admin/articles/article/: submit_line.html
src/articles/templates/articles/: article_change_form.html  article_detail.html  article_list.html  base.html
src/articles/templates/articles/snippets/: admin_link.html  analytics.html  datetime.html  metadata.html  navigation.html  page_metadata.html
src/articles/templates/two_factor/: _base.html
src/articles/tests/: conftest.py  test_admin.py  test_api_views.py  test_feed_views.py  test_html_views.py  test_migrations.py  test_models.py
src/articles/views/: __init__.py  api.py  feeds.py  html.py
src/articles/views/html/: list_articles.py  single_article.py
src/attachments/: admin.py  models.py  urls.py  views.py
src/attachments/management/commands/: reprocess_all_attachments.py
src/attachments/migrations/: 0001_initial.py  0002_auto_20200826_1814.py  0003_auto_20200826_1843.py  0004_auto_20200903_2116.py  0005_attachment_open_graph_image.py  0006_auto_20201128_2022.py  0007_auto_20201201_1917.py  0008_attachment_updated_at.py  0009_remove_attachment_updated_at.py
src/attachments/static/attachments/js/: copy_url.js
src/attachments/tests/: conftest.py  test_models.py  test_views.py
src/attachments/tests/cassettes/test_models/: test_attachment_is_processed_by_shortpixel.yaml
src/blog/: settings.py  urls.py
src/blog/templates/admin/: base_site.html
src/blog/tests/: test_robots.py
stubs/: rcssmin.pyi
stubs/readtime/: __init__.pyi  api.pyi  result.pyi
