[tool.pytest.ini_options]
addopts = "--color=yes"
minversion = "6.0"
DJANGO_SETTINGS_MODULE = "blog.settings"
testpaths = [
    "src",
]
env = [
    "GOATCOUNTER_DOMAIN=gc.gabnotes.org"
]

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
disallow_untyped_defs = true
warn_redundant_casts = true
strict_equality = true
disallow_untyped_calls = true
warn_unreachable = true
enable_error_code = ["redundant-expr"]

[[tool.mypy.overrides]]
module = [
    "django.*",
    "environ",
    "django_otp.plugins.otp_static.models",
    "two_factor.models",
    "django_otp.plugins.otp_totp.models",
    "model_bakery",
    "invoke",
    "kolo",
]
ignore_missing_imports = true

[tool.flakeheaven]
max_complexity = 10
format = "grouped"

[tool.flakeheaven.plugins]
"flake8-*" = [
    "+*",
    # long lines
    "-E501",
    # conflict with black on PEP8 interpretation
    "-E203",
    # deprecated rule: https://www.flake8rules.com/rules/W503.html
    "-W503",
]
flake8-builtins = ["-A003"] # class attribute is shadowing a python builtin
flake8-quotes = ["-Q000"] # found double quotes, conflict with black
flake8-commas = ["-C812"] # missing trailing comma, conflict with black
flake8-docstrings = ["-D1??"] # missing docstring
flake8-rst-docstrings = ["-*"]
flake8-isort = ["-*"]

[tool.flakeheaven.exceptions."**/migrations/*"]

[tool.flakeheaven.exceptions."**/tests/*"]
flake8-bandit = ["-S101"] # Use of assert detected.

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
